# logi-mx

./: .gitignore  90-logi-mx.rules  ARCHITECTURE.md  AUR_SUBMISSION.md  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  PKGBUILD  PKGBUILD.bin.SRCINFO  README.md  REUSE.toml  SECRETS_SETUP.md  cliff.toml  codecov.yml  logi-mx-daemon.desktop  logi-mx-daemon.service  logi-mx.install
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependabot.yml  release.yml  version-bump.yml
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml
daemon/src/: main.rs  scroll_handler.rs  tray.rs
docs/: AUR_BINARY_PACKAGE.md  QUICK_START_BIN.md
driver/: Cargo.toml
driver/src/: error.rs  error_tests.rs  lib.rs
driver/src/config/: mod.rs  schema.rs
driver/src/devices/: mod.rs  mx_master_3s.rs  traits.rs
driver/src/hidpp/: constants.rs  device.rs  features.rs  features_tests.rs  mod.rs  packet.rs  packet_tests.rs
driver/tests/: integration_test.rs
scripts/: generate-pkgbuild-bin.sh
ui/: Cargo.toml
ui/src/: main.rs
