[workspace]
resolver = "3"
members = ["driver", "daemon", "cli", "ui"]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["RAprogramm <andrey.rozanov.vl@gmail.com>"]
license = "MIT"
repository = "https://github.com/RAprogramm/logi-mx"
rust-version = "1.91"

[workspace.dependencies]
masterror = { version = "0.25.1", default-features = false }
hidapi = { version = "2.6", default-features = false, features = ["linux-native"] }
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
udev = "0.9"
evdev = "0.13"
clap = { version = "4.5", features = ["derive"] }
gtk4 = { version = "0.10", features = ["v4_14"] }
libadwaita = { version = "0.8", features = ["v1_6"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
