[package]
name = "logi-mx-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["tray"]
tray = ["dep:ksni", "dep:gtk4", "dep:libadwaita"]

[dependencies]
logi-mx-driver = { path = "../driver" }
masterror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
udev.workspace = true
evdev.workspace = true
fslock = "0.2"
ksni = { version = "0.3", optional = true }
gtk4 = { workspace = true, optional = true }
libadwaita = { workspace = true, optional = true }
