[package]
name = "logi-mx-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
masterror.workspace = true
hidapi.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
udev.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
serde_json = "1.0"
